<resources>
    <string name="app_name">SMAC thực tập</string>
    <string name="day_one">Day One</string>
    <string name="info_student">Info student</string>
    <string name="submit">Submit</string>
    <string name="conduct_student">Conduct student:</string>
    <string name="good">Good</string>
    <string name="rather">Rather</string>
    <string name="least">Least</string>
    <string name="status">Status:</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_blank_fragment2">Hello blank fragment2</string>
    <string name="alert_dialog">Đây là AlerDialog</string>
    <string name="number_call">Enter your phone number</string>
    <string name="message_call">Enter your message</string>
    <string name="send">Send</string>
    <string name="call">Call</string>
    <string name="write_to_file">Write to file</string>
    <string name="read_to_file">Read to file</string>
    <string name="create_cached_file">Create cached file</string>
    <string name="read_cached_file">Read cached file</string>
    <string name="create_temp_file">Create temp file</string>
</resources>
